--- a/JavaScript Practice/08-01-2021/HTML_Practice_1.html
+++ b/JavaScript Practice/08-01-2021/HTML_Practice_1.html
@@ -6,23 +6,24 @@
 <body>
 	<div class="maindiv">
 		<div class="inline-block">
-			<img src="https://i.pinimg.com/236x/f0/92/d0/f092d029600f6fc1b3c475597b39c96b.jpg">
-			<p align="center">This is Image Description</p>
+			<section class="block-section">215 x 315px</section>
+			<span class="paragraph">This is Image Description</span>
 		</div>
 		<div class="inline-block">
-			<img src="https://i.pinimg.com/236x/f0/92/d0/f092d029600f6fc1b3c475597b39c96b.jpg">
-			<p align="center">This is Image Description</p>
+			<section class="block-section">215 x 315px</section>
+			<span class="paragraph">This is Image Description</span>
 		</div>
 		<div class="inline-block">
-			<img src="https://i.pinimg.com/236x/f0/92/d0/f092d029600f6fc1b3c475597b39c96b.jpg">
-			<p align="center">This is Image Description</p>
+			<section class="block-section">215 x 315px</section>
+			<span class="paragraph">This is Image Description</span>
 		</div>
 		<div class="inline-block">
-			<img src="https://i.pinimg.com/236x/f0/92/d0/f092d029600f6fc1b3c475597b39c96b.jpg">
-			<p align="center">This is Image Description</p>
+			<section class="block-section">215 x 315px</section>
+			<span class="paragraph">This is Image Description</span>
 		</div>
-
-		<p align="center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut porttitor purus, et gravida ex. Praesent tincidunt odio nunc, sed congue libero ullamcorper sed. In ultrices consectetur posuere. Praesent suscipit ullamcorper tempor. Sed quis aliquet arcu. Aenean pulvinar convallis lacus, quis congue orci tristique nec. Cras vitae tellus eleifend, rutrum felis sit amet, facilisis tortor. Aenean porta nisi ut odio tempor varius. Suspendisse vel interdum sem. Maecenas eget lorem sem. In dapibus aliquam magna in pellentesque.</p>
+		<p class="paragraph1">
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut porttitor purus, et gravida ex. Praesent tincidunt odio nunc, sed congue libero ullamcorper sed. In ultrices consectetur posuere. Praesent suscipit ullamcorper tempor. Sed quis aliquet arcu. Aenean pulvinar convallis lacus, quis congue orci tristique nec. Cras vitae tellus eleifend, rutrum felis sit amet, facilisis tortor. Aenean porta nisi ut odio tempor varius. Suspendisse vel interdum sem. Maecenas eget lorem sem. In dapibus aliquam magna in pellentesque
+		</p>
 	</div>		
 </body>
 <link rel="stylesheet" href="style.css">
