Javascript Extra Task Uploaded 19-01-2021

--- a/javascript/practice/19-01-2021/show.html
+++ b/javascript/practice/19-01-2021/show.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Extra Task 19-01-2021</title>
+    <title>Display Data</title>
 </head>
 <body>
-  
+    
 </body>
-<script src="extra_task.js"></script>
+<script src="show.js"></script>
 </html>
