--- a/test/subuser.html
+++ b/test/subuser.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="subuser.css">
     <title>Dashboard</title>
 </head>
 <body>
@@ -20,13 +20,7 @@
                   <a class="nav-link" href="#">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="users.html">Users</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="usersession.html">Login Session</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#" onclick="logout()">Logout</a>
+                  <a class="nav-link" onclick="logout()">Logout</a>
                 </li>
               </ul>
             </div>
@@ -36,6 +30,6 @@
 
     </div>
 </body>
-<script src="dashboard.js"></script>
+<script src="subuser.js"></script>
 <script src="logout.js"></script>
 </html>
