--- a/test/users.html
+++ b/test/users.html
@@ -23,7 +23,7 @@
                   <a class="nav-link" href="users.html">Users</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Login Session</a>
+                  <a class="nav-link" href="usersession.html">Login Session</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Logout</a>
@@ -41,6 +41,7 @@
             <div class="col col-md-12">
                 <form action="#" class="formdiv">&nbsp;
                     <input type="text" name="name" id="name" placeholder="Name" required> &nbsp; &nbsp; &nbsp;
+                    <input type="hidden" name="oldname" id="oldname">
                     <input type="email" name="email" id="email"  placeholder="Email" required> &nbsp; &nbsp; &nbsp;
                     <input type="password" name="password" id="password" placeholder="Password" required> &nbsp; &nbsp; &nbsp;
                     <input type="date" name="bdate" id="bdate" placeholder="Birth Date" required> &nbsp; &nbsp; &nbsp; <br>
