--- a/test/usersession.html
+++ b/test/usersession.html
@@ -23,7 +23,7 @@
                   <a class="nav-link" href="users.html">Users</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="usersession.html">Login Session</a>
+                  <a class="nav-link" href="#">Login Session</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#" onclick="logout()">Logout</a>
@@ -35,7 +35,11 @@
     <div id="name" class="text-center name">
 
     </div>
+    <br>
+    <div id="tabledata">
+
+    </div>
 </body>
-<script src="dashboard.js"></script>
+<script src="usersession.js"></script>
 <script src="logout.js"></script>
 </html>
