--- a/test/login.html
+++ b/test/login.html
@@ -25,7 +25,7 @@
                             </div>
                             <br>
                             <div class="form-group" align='center'>
-                                <input type="button" id="submit" name="submit" class="btn btn-info btn-md" value="Submit">
+                                <input type="button" id="submit" name="submit" class="btn btn-info btn-md" value="Login">
                                 <input type="button" id="register" name="register" class="btn btn-success btn-md" value="Register">
                             </div>
                         </form>
