"Test Final Uploaded"

--- a/test/dashboard.html
+++ b/test/dashboard.html
@@ -17,7 +17,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Dashboard</a>
+                  <a class="nav-link" href="dashboard.html">Dashboard</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="users.html">Users</a>
@@ -26,13 +26,23 @@
                   <a class="nav-link" href="usersession.html">Login Session</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" onclick="logout()">Logout</a>
+                  <a class="nav-link" onclick="logout()">Logout</a>
                 </li>
               </ul>
             </div>
           </nav>
     </div>
     <div id="name" class="text-center name">
+
+    </div>
+    <br>
+    <div id="user1">
+
+    </div>
+    <div id="user2">
+
+    </div>
+    <div id="user3">
 
     </div>
 </body>
