--- a/test/subuser.html
+++ b/test/subuser.html
@@ -29,6 +29,13 @@
     <div id="name" class="text-center name">
 
     </div>
+    <br>
+    <div class="text-center">
+        <h3>Welcome To Cybercom Creation</h3>
+    </div>
+    <div id="msg" class="text-center">
+
+    </div>
 </body>
 <script src="subuser.js"></script>
 <script src="logout.js"></script>
