--- a/test/usersession.html
+++ b/test/usersession.html
@@ -17,7 +17,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Dashboard</a>
+                  <a class="nav-link" href="dashboard.html">Dashboard</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="users.html">Users</a>
